# rutherford_project

./: .gitignore  README.md  rutherphort.py
cpp/: CMakeLists.txt
cpp/headers/: geometry.h  libraries.h  physics.h  shaders.h  vertices.h
cpp/includes/glad/: glad.c  glad.h
cpp/shaders/: fragment.glsl  vertex.glsl
cpp/src/: geometry.cpp  main.cpp  physics.cpp  shaders.cpp  vertices.cpp
py/: rutherphort.py
